# argo-workflows-api-rs

./: .openapi-generator-ignore  Cargo.toml  README.md  generate-argo-workflows-api.sh
.openapi-generator/: FILES
docs/: ArchivedWorkflowServiceApi.md  ArtifactServiceApi.md  ClusterWorkflowTemplateServiceApi.md  CronWorkflowServiceApi.md  EventServiceApi.md  EventSourceServiceApi.md  EventsourceCreateEventSourceRequest.md  EventsourceEventSourceWatchEvent.md  EventsourcePeriodCreateEventSourceRequest.md  EventsourcePeriodEventSourceWatchEvent.md  EventsourcePeriodLogEntry.md  EventsourcePeriodUpdateEventSourceRequest.md  EventsourceUpdateEventSourceRequest.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1Amount.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AmqpConsumeConfig.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AmqpEventSource.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AmqpExchangeDeclareConfig.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AmqpQueueBindConfig.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AmqpQueueDeclareConfig.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1ArgoWorkflowTrigger.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1ArtifactLocation.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AwsLambdaTrigger.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AzureEventHubsTrigger.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AzureEventsHubEventSource.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1AzureQueueStorageEventSource.md  GithubComArgoprojArgoEventsPkgApisEventsV1alpha1Backoff.md  (+728 more)
(+805 files in other folders)
